@startuml
title casbinjs/core - Data Contracts and Library Boundaries

skinparam shadowing false
skinparam classAttributeIconSize 0

package "casbinjs/core" {
  interface AuthorizerOptions {
    +model?: string
    +policies?: string[][]
    +subject?: string
    +organization?: string
  }

  interface Authorizer {
    +getEnforcer(): Enforcer | null
    +can(action: string, resource: string): Promise<boolean>
    +canAny(actions: string[], resource: string): Promise<boolean>
    +canAll(actions: string[], resource: string): Promise<boolean>
    +addPolicy(policy: string[]): Promise<void>
    +removePolicy(policy: string[]): Promise<void>
    +replacePolicies(policies: string[][]): Promise<void>
  }

  class AuthorizerFacade {
    -enforcer: Enforcer
    -policySnapshot: string[][]
    -subject?: string
    -organization?: string
    +getEnforcer(): Enforcer | null
    +can(action: string, resource: string): Promise<boolean>
    +canAny(actions: string[], resource: string): Promise<boolean>
    +canAll(actions: string[], resource: string): Promise<boolean>
    +addPolicy(policy: string[]): Promise<void>
    +removePolicy(policy: string[]): Promise<void>
    +replacePolicies(policies: string[][]): Promise<void>
  }

  class EnforcerFactory {
    +createEnforcer(options: AuthorizerOptions): Promise<Enforcer>
  }
}

package "casbin-core" {
  interface Enforcer {
    +enforce(...args): Promise<boolean>
  }
}

Authorizer <|. AuthorizerFacade

AuthorizerFacade --> EnforcerFactory
AuthorizerFacade ----> Enforcer
EnforcerFactory --> AuthorizerOptions
EnforcerFactory --> Enforcer

note bottom of AuthorizerOptions
Initialization contract for the authorizer.
Uses raw Casbin-style policy snapshots.

organization is optional and acts as the
current authorization scope for enforcement.
end note

note top of Authorizer
casbinjs/core public API:
async checks and policy mutation helpers.
Uses policies as the single in-memory
authorization source of truth.
end note

note bottom of AuthorizerFacade
Facade over casbin-core.
It does not re-implement enforcement semantics.

It stores:
- current policy snapshot
- current subject
- optional organization scope

Local mutation helpers:
- addPolicy
- removePolicy
- replacePolicies
end note

note right of Enforcer
casbin-core dependency boundary.
Underlying enforcement engine used by casbinjs/core.
end note
@enduml
